--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
     <header>
-        <h1>Сайт</h1>
+        <h1>Японская анимация</h1>
         <div class="navig" id="navig">
             <button class="navigbt">Содержание</button>
             <div class="navig-content">
@@ -172,6 +172,8 @@
 </body>
 
 <footer>
-    <p>hfusdfiusdhfiusdhfoisd</p>
+    <div>
+        <br><p>Антонов С.Р. +79507557689 vv_s1@mail.ru</p>
+    </div>
 </footer>
 </html>
