--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </script>
 
 </head>
+<body>
     <header>
         <h1>Японская анимация</h1>
         <div class="navig" id="navig">
@@ -173,7 +174,11 @@
 
 <footer>
     <div>
-        <br><p>Антонов С.Р. +79507557689 vv_s1@mail.ru</p>
+        <ul>
+            <li>Антонов Сергей Романович, г. Алексеевка Белгородская обл.</li>
+            <li>vv_s1@mail.ru</li>
+            <li>+7 (950) 755-76-89</li>
+        </ul>
     </div>
 </footer>
 </html>
